--- a/c_files/Makefile
+++ b/c_files/Makefile
@@ -51,8 +51,8 @@ gadd:
 	git add -A
 
 gcommit: gadd
-	echo "commit message : "
-	read msg
+	@echo "commit message : "
+	@read msg
 	git commit -m "$msg"
 
 gpush: gcommit
