--- a/c_files/Makefile
+++ b/c_files/Makefile
@@ -47,6 +47,9 @@ noobj: re clean
 
 noflags_noobj: noflags clean
 
+open:
+	vim +12 ../ino_files/*/*.ino ../py_files/*.py Makefile *.c *.h
+
 gadd:
 	git add -A
 
