--- a/c_files/Makefile
+++ b/c_files/Makefile
@@ -34,7 +34,10 @@ $(NAME):
 clean:
 	rm -f $(OBJ)
 
-fclean: clean
+clean_swp:
+	find . -name "*~" -o -name "#*#" -o -name ".*.swp" -delete -print
+
+fclean: clean clean_swp
 	rm -f $(NAME)
 
 re: fclean all
@@ -55,7 +58,7 @@ exec:
 	make clean
 	./$(NAME)
 
-gadd:
+gadd: clean clean_swp
 	git add -A
 
 gcommit: gadd
